bk_ida/gccida/g2/rest_of_compilation
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:2914:15: error: use of undeclared identifier 'TV_REST_OF_COMPILATION_0'; did you mean 'TV_REST_OF_COMPILATION'?
timevar_push( TV_REST_OF_COMPILATION_0); 
              ^~~~~~~~~~~~~~~~~~~~~~~~
              TV_REST_OF_COMPILATION
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:89:13: note: 'TV_REST_OF_COMPILATION' declared here
DEFTIMEVAR (TV_REST_OF_COMPILATION   , "rest of compilation")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:2944:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:2946:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3035:10: error: expected expression
RCharSet::RefreshList( ); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3041:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3043:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3083:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3090:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3095:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3102:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3114:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3123:10: error: expected expression
RCharSet::RefreshList( ); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3123:1: error: redefinition of label 'RCharSet'
RCharSet::RefreshList( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3035:1: note: previous definition is here
RCharSet::RefreshList( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3126:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3136:15: error: use of undeclared identifier 'TV_TO_SSA_0'; did you mean 'TV_TO_SSA'?
timevar_push( TV_TO_SSA_0); 
              ^~~~~~~~~~~
              TV_TO_SSA
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:81:13: note: 'TV_TO_SSA' declared here
DEFTIMEVAR (TV_TO_SSA                , "convert to SSA")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3146:14: error: use of undeclared identifier 'TV_TO_SSA_0'; did you mean 'TV_TO_SSA'?
timevar_pop( TV_TO_SSA_0); 
             ^~~~~~~~~~~
             TV_TO_SSA
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:81:13: note: 'TV_TO_SSA' declared here
DEFTIMEVAR (TV_TO_SSA                , "convert to SSA")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3149:15: error: use of undeclared identifier 'TV_SSA_CCP_0'; did you mean 'TV_SSA_CCP'?
timevar_push( TV_SSA_CCP_0); 
              ^~~~~~~~~~~~
              TV_SSA_CCP
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:82:13: note: 'TV_SSA_CCP' declared here
DEFTIMEVAR (TV_SSA_CCP               , "SSA CCP")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3156:14: error: use of undeclared identifier 'TV_SSA_CCP_0'; did you mean 'TV_SSA_CCP'?
timevar_pop( TV_SSA_CCP_0); 
             ^~~~~~~~~~~~
             TV_SSA_CCP
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:82:13: note: 'TV_SSA_CCP' declared here
DEFTIMEVAR (TV_SSA_CCP               , "SSA CCP")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/toplev.c:3160:15: error: use of undeclared identifier 'TV_SSA_DCE_0'; did you mean 'TV_SSA_DCE'?
timevar_push( TV_SSA_DCE_0); 
              ^~~~~~~~~~~~
              TV_SSA_DCE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/timevar.def:83:13: note: 'TV_SSA_DCE' declared here
DEFTIMEVAR (TV_SSA_DCE               , "SSA aggressive DCE")
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rest_of_compilation/src/obj/toplev.o] Error 1
